Igloo Boot: migration Search Query