@@ -1,22 +1,46 @@
 package org.iglooproject.basicapp.core.business.user.search;
 
+import static org.iglooproject.jpa.more.search.query.HibernateSearchUtils.toSortOrder;
+
 import java.util.List;
+import java.util.function.Function;
 
-import org.apache.lucene.search.SortField;
+import org.hibernate.search.engine.search.sort.dsl.SearchSortFactory;
+import org.hibernate.search.engine.search.sort.dsl.SortFinalStep;
 import org.iglooproject.basicapp.core.business.user.model.User;
-import org.iglooproject.jpa.business.generic.model.GenericEntity;
 import org.iglooproject.jpa.more.business.sort.ISort;
-import org.iglooproject.jpa.more.business.sort.SortUtils;
 
-import com.google.common.collect.ImmutableList;
+public enum UserSort implements ISort<Function<SearchSortFactory, SortFinalStep>> {
 
-public enum UserSort implements ISort<SortField> {
-
+	SCORE {
+		@Override
+		public List<Function<SearchSortFactory, SortFinalStep>> getSortFields(SortOrder sortOrder) {
+			return List.of(
+				f -> f.score()
+			);
+		}
+		@Override
+		public SortOrder getDefaultOrder() {
+			return SortOrder.DESC;
+		}
+	},
+	ID {
+		@Override
+		public List<Function<SearchSortFactory, SortFinalStep>> getSortFields(SortOrder sortOrder) {
+			return List.of(
+				f -> f.field(User.ID).order(toSortOrder(this, sortOrder))
+			);
+		}
+		@Override
+		public SortOrder getDefaultOrder() {
+			return SortOrder.DESC;
+		}
+	},
 	LAST_NAME {
 		@Override
-		public List<SortField> getSortFields(SortOrder sortOrder) {
-			return ImmutableList.of(
-				SortUtils.luceneSortField(this, sortOrder, SortField.Type.STRING, User.LAST_NAME_SORT)
+		public List<Function<SearchSortFactory, SortFinalStep>> getSortFields(SortOrder sortOrder) {
+			return List.of(
+				f -> f.field(User.LAST_NAME_SORT).order(toSortOrder(this, sortOrder))
 			);
 		}
 		@Override
@@ -26,12 +50,11 @@ public enum UserSort implements ISort<SortField> {
 	},
 	FIRST_NAME {
 		@Override
-		public List<SortField> getSortFields(SortOrder sortOrder) {
-			return ImmutableList.of(
-				SortUtils.luceneSortField(this, sortOrder, SortField.Type.STRING, User.FIRST_NAME_SORT)
+		public List<Function<SearchSortFactory, SortFinalStep>> getSortFields(SortOrder sortOrder) {
+			return List.of(
+				f -> f.field(User.FIRST_NAME_SORT).order(toSortOrder(this, sortOrder))
 			);
 		}
-		
 		@Override
 		public SortOrder getDefaultOrder() {
 			return SortOrder.ASC;
@@ -39,36 +62,16 @@ public enum UserSort implements ISort<SortField> {
 	},
 	FULL_NAME {
 		@Override
-		public List<SortField> getSortFields(SortOrder sortOrder) {
-			return ImmutableList.of(
-				SortUtils.luceneSortField(this, sortOrder, SortField.Type.STRING, User.LAST_NAME_SORT),
-				SortUtils.luceneSortField(this, sortOrder, SortField.Type.STRING, User.FIRST_NAME_SORT)
+		public List<Function<SearchSortFactory, SortFinalStep>> getSortFields(SortOrder sortOrder) {
+			return List.of(
+				f -> f.field(User.LAST_NAME_SORT).order(toSortOrder(this, sortOrder)),
+				f -> f.field(User.FIRST_NAME_SORT).order(toSortOrder(this, sortOrder))
 			);
 		}
-		
 		@Override
 		public SortOrder getDefaultOrder() {
 			return SortOrder.ASC;
 		}
-	},
-	ID {
-		@Override
-		public List<SortField> getSortFields(SortOrder sortOrder) {
-			return ImmutableList.of(
-				SortUtils.luceneSortField(this, sortOrder, SortField.Type.LONG, GenericEntity.ID)
-			);
-		}
-		
-		@Override
-		public SortOrder getDefaultOrder() {
-			return SortOrder.DESC;
-		}
 	};
-
-	@Override
-	public abstract List<SortField> getSortFields(SortOrder sortOrder);
-
-	@Override
-	public abstract SortOrder getDefaultOrder();
 
 }
